--- a/application.yaml
+++ b/application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/kaviyarasan-Thirunavukkarasu/argoCD.git
-    path: dev
+    path: overlays/production
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
