Fix: adding new env secrets

--- a/overlays/production/secret.properties
+++ b/overlays/production/secret.properties
@@ -1,3 +1,4 @@
 BG_COLOR=#12181b
 FONT_COLOR=#FFFFFF
-CUSTOM_HEADER=welcome to the prod environment kavihh
+CUSTOM_HEADER=welcome to the prod environment kavi
+CUSTOM_PHOTO=https://imageio.forbes.com/specials-images/imageserve/60f1e792c7e89f933811814c/DevOps-concept/960x0.jpg?format=jpg&width=960 
